
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( dtpgtest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
