
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( dtpgtest )
add_subdirectory ( analyzetest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
