
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( fsimtest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
