
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set ( minpat_reducer_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/FaultAnalyze.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/FFRAnalyze.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/FaultInfo.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/MFFCAnalyze.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/Reducer.cc
  PARENT_SCOPE
  )


# ===================================================================
# ターゲットの設定
# ===================================================================


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
