
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ../
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( minpat )
add_subdirectory ( dichotomy_test )
add_subdirectory ( analyzetest )



# ===================================================================
#  ソースファイルの設定
# ===================================================================
