
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( minpat )
add_subdirectory ( filter_test )
add_subdirectory ( reduce_test )
add_subdirectory ( analyze_test )



# ===================================================================
#  ソースファイルの設定
# ===================================================================
